# battle-City

./: .gitignore  CMakeLists.txt  run.sh
res/: resources.json
res/shaders/: fSprite.glsl  fragment.glsl  vertex.glsl
res/textures/refs/: start_screen.ai
src/: main.cpp
src/Game/: AIComponent.cpp  AIComponent.h  Game.cpp  Game.h  Level.cpp  Level.h  Tank.cpp  Tank.h
src/Game/GameObjects/: BetonWall.cpp  BetonWall.h  Border.cpp  Border.h  BrickWall.cpp  BrickWall.h  Bullet.cpp  Bullet.h  Eagle.cpp  Eagle.h  IGameObject.cpp  IGameObject.h  Ice.cpp  Ice.h  Tank.cpp  Tank.h  Trees.cpp  Trees.h  Water.cpp  Water.h
src/Game/GameStates/: IGameState.h  Level.cpp  Level.h  StartScreen.cpp  StartScreen.h
src/Physics/: PhysicsEngine.cpp  PhysicsEngine.h
src/Renderer/: AnimatedSprite.cpp  AnimatedSprite.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h  Sprite.cpp  Sprite.h  SpriteAnimator.cpp  SpriteAnimator.h  Texture2D.cpp  Texture2D.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
src/Resources/: ResourceManager.cpp  ResourceManager.h  stb_image.h
src/System/: Timer.cpp  Timer.h
